--- a/src/components/SimilarObject/SimilarObject.scss
+++ b/src/components/SimilarObject/SimilarObject.scss
@@ -1,7 +1,17 @@
 .similar{
   display: flex;
-  gap: 0.5rem;
-  max-height: 400px;
+  flex-direction: column;
+  &__map{
+    display: flex;
+    gap: 0.5rem;
+    max-height: 400px;
+  }
+  &__filter{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+  }
 }
 .similar-cards{
   display: flex;
@@ -26,6 +36,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    justify-content: space-between;
+    &-top{
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
   }
   &__title{
     color: #737373;
