--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,18 +1,3 @@
 .header {
-  padding: 1rem;
-  border: 1px solid #484848;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &__logo {
-    height: 50px;
-  }
-}
-
-@media(max-width: 480px) {
-  .header {
-    justify-content: center;
-  }
+  padding: 2rem 0;
 }
