add info, object components

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,8 +25,13 @@ body {
   gap: 1rem;
   width: 100%;
 }
-.top {
+.header {
   background-color: #0c54a0;
+}
+.top{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .text {
@@ -38,4 +43,5 @@ body {
   border: 1px solid #000;
   border-radius: 5px;
   font-family: 'Montserrat', sans-serif;
+  display: block;
 }
