--- a/src/components/Statistic/Statistic.scss
+++ b/src/components/Statistic/Statistic.scss
@@ -22,17 +22,20 @@
     display: inline-flex;
     align-items: center;
     gap: 0.3rem;
+    &_grey{
+      color: #737373;
+    }
   }
 
   &__count {
-    font-size: 12px;
-    font-weight: 700;
-    margin-left: 0.5rem;
+    font-weight: 600;
+    margin-left: 0.2rem;
+    font-size: 14px;
   }
 
   &__last {
     color: #fff;
-    font-size: 9px;
+    font-size: 12px;
 
     & span {
       font-weight: 700;
