add useContext, api, server

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,10 +38,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.subtitle {
-  padding: 0.5rem 1rem;
-  border: 1px solid #000;
-  border-radius: 5px;
-  font-family: 'Montserrat', sans-serif;
-  display: block;
-}
+// .subtitle {
+//   padding: 0.5rem 1rem;
+//   border: 1px solid #000;
+//   border-radius: 5px;
+//   font-family: 'Montserrat', sans-serif;
+//   display: block;
+// }
