--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,21 +1,7 @@
-.title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.5rem;
-  padding: 1rem;
+.title{
   background-color: #0c54a0;
-  border-radius: 5px;
-  box-sizing: border-box;
-
-  &__text {
+  padding: 2rem 0;
+  &__text{
     color: #fff;
-    width: 100%;
-  }
-}
-
-@media (max-width: 480px) {
-  .title__text {
-    text-align: center;
   }
 }
