--- a/src/components/Ads/Ads.scss
+++ b/src/components/Ads/Ads.scss
@@ -2,8 +2,8 @@
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
-  padding: 0 1rem;
-
+  padding: 2rem 0;
+  align-items: center;
   &__link {
     color: #737373;
     text-decoration: none;
@@ -19,13 +19,14 @@
   }
 }
 .text__link{
-  color: #737373;
+  color: #fff;
   text-decoration: none;
+  font-size: 12px;
   transition: color .3s,
     transform .3s;
 
   &:hover {
-    color: #0c54a0;
+    // color: #0c54a0;
     // text-decoration: underline;
     transform: scale(1.1);
   }
